--- a/DNN_TensorFlow_example.ipynb
+++ b/DNN_TensorFlow_example.ipynb
@@ -19,9 +19,7 @@
    "source": [
     "We will provide a quick introduction into programming with TensorFlow.\n",
     "\n",
-    "We revist our old friend, MNIST digit classification and provide two solutions\n",
-    "- the first using \"raw\", low-level TensorFlow\n",
-    "- the second using the high-level Keras API"
+    "We revist our old friend, MNIST digit classification and provide a solution using the high-level Keras API"
    ]
   },
   {
