--- a/Index.ipynb
+++ b/Index.ipynb
@@ -275,7 +275,7 @@
     "- Interpretation: understanding models\n",
     "\n",
     "**Imbalanced data (clarification)**\n",
-    "[Data Augmentation: side-effects](Imbalanced_Data.ipynb#Issues-with-augmenting-the-training-examples)\n",
+    "- [Data Augmentation: side-effects](Imbalanced_Data.ipynb#Issues-with-augmenting-the-training-examples)\n",
     "\n",
     "**Support Vector Classifiers (continued)**\n",
     "- [SVM: Kernel Transformations](SVM_Kernel_Functions.ipynb)\n",
@@ -285,7 +285,7 @@
     "- [Interpreting the Components](PCA_Interpretation.ipynb)\n",
     "- [PCA in Finance](PCA_Yield_Curve_Intro.ipynb)\n",
     "    - [linked notebook](Unsupervised.ipynb)\n",
-    "- [Pseudo Matrix Factorization](Pseudo_Matrix_Factorization)\n",
+    "- [Pseudo Matrix Factorization](Pseudo_Matrix_Factorization.ipynb)\n",
     "\n",
     "\n",
     "\n",
