--- a/Pseudo_Matrix_Factorization.ipynb
+++ b/Pseudo_Matrix_Factorization.ipynb
@@ -145,6 +145,136 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import class_helper\n",
+    "%aimport class_helper\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "# Pseudo Matrix Factorization and Recommender Systems\n",
+    "\n",
+    "You have no doubt been to a website that\n",
+    "- Has made a recommendation to you\n",
+    "- Based on your personal \"features\"\n",
+    "\n",
+    "*You might also like ...*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "How does this work ?\n",
+    "- *You* are an example $\\x^\\ip$, expressed as a vector of features\n",
+    "    - $\\x^\\ip_j$ is your \"rating\" for product $j$\n",
+    "- The number $n$ of products is large\n",
+    "    - You have rated only a small fraction $n_i \\lt n$\n",
+    "- You have *not* rated product $j'$\n",
+    "    - How can the system recommend $j'$ to you ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "PCA to the rescue !\n",
+    "- Perform PCA on $\\X$ ($m$ is number of users; $n$ is number of products)\n",
+    "- The Principal Components are \n",
+    "    - \"Concepts\" that identify groups of products"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We will\n",
+    "- Re-express your ratings of concrete product $\\x^\\ip$\n",
+    "- Into strength of concepts $\\tilde\\x^\\ip$\n",
+    "- Find other users $i'$ with similar strength of concepts\n",
+    "$$\n",
+    "\\tilde\\x^{(i')} \\approx \\tilde\\x^\\ip\n",
+    "$$\n",
+    "- Deduce that you (user $i$) have similar tastes to user $i'$\n",
+    "- Recommend to you (user $i$) any product $j$\n",
+    "    - where $\\x^{i')}_j$ is high"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "This is roughly how Netflix recommendations work.\n",
+    "- Products are Movies\n",
+    "- Principal Components (\"concepts\") turn out to be Movie genres\n",
+    "    - Action, Comedy, Romance, Gender-specific\n",
+    "    \n",
+    "So if your movie preferences lean to Comedy, Netflix will recommend to you Comedy-type movies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Although this *seems* like a simple application of PCA\n",
+    "- There is a giant catch !\n",
+    "- $\\X$ is sparse (lots of empty entries)\n",
+    "    - How many of the thousands of movies in Netflix have *you* rated ?\n",
+    "\n",
+    "How do we factor a matrix with undefined entries ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Let's go the the [notebook section on Pseudo Matrix Factorization](Unsupervised.ipynb#Recommender-Systems:-Pseudo-SVD)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -152,28 +282,13 @@
     }
    },
    "source": [
-    "# Interpreting the Components/Synthetic Features\n",
+    "# Pseudo Matrix factorization wrap-up\n",
     "\n",
-    "We have shown that\n",
-    "$$\\tilde\\X  = \\X V  $$\n",
-    "\n",
-    "This means that the $j^{th}$ Component (Synthetic feature) $\\tilde{\\X}_j$\n",
-    "- is a linear combination of the $n$ original features $\\X_1, \\ldots, \\X_n$\n",
-    "- combined with weights $V_j$\n",
-    "\n",
-    "$$\n",
-    "\\begin{array} \\\\\n",
-    "\\tilde{\\X}  & = & \\X V & \\text{from the inverse transformation} \\\\\n",
-    "\\tilde{\\X}_j  & = & (\\X V)_j & \\text{focus on synthetic feature } j \\\\\n",
-    "              & = & \n",
-    "              \\begin{pmatrix}\n",
-    "              \\X^{(1)} \\cdot V_j \\\\\n",
-    "              \\X^{(2)} \\cdot V_j \\\\\n",
-    "              \\vdots \\\\\n",
-    "              \\X^{(m)} \\cdot V_j \\\\\n",
-    "              \\end{pmatrix} & \\text{definition of matrix multiplication}\n",
-    "\\end{array}\n",
-    "$$\n"
+    "The techniques in Pseudo factorization are a nice bridge between Classical ML and Deep Learning\n",
+    "- An interesting Loss function\n",
+    "- Not amenable to closed form solution (because of missing entries)\n",
+    "- But approximated using our generic optimization tool\n",
+    "    - Gradient Descent"
    ]
   },
   {
@@ -184,197 +299,14 @@
     }
    },
    "source": [
-    "We can try to interpret the meaning of $\\tilde{\\X}_j$ by looking at the weights $V_j$\n",
-    "- It is often the case that, for the first component $\\tilde{\\X}_1$:\n",
-    "    - all $n$ elements of $V_1$ are approximately equal\n",
-    "    - leading to an interpretation of $\\tilde{\\X}_1$ as being an *average* across features\n",
-    "        - equally weighted market index when the features are the returns of different equities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "It is also often the case that $V_j$ \n",
-    "- contains a subset of indices $P = \\{ i_1, i_2, \\dots \\}$ with high positive values\n",
-    "- contains a subset of indices $N = \\{ i'_1, i'_2, \\dots \\}$ with high negative values\n",
-    "- leading to an interpretation of $\\tilde{\\X}_j$ as expressing a *dichotomy* between the features in $P$ and those in $N$\n",
-    "    - For example: the returns of large-cap equities versus small-cap equities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Similarly, we can examine the relationship\n",
-    "$$\n",
-    "\\X = \\tilde{\\X} V^T\n",
-    "$$\n",
+    "This type of problem is very typical of those that we will encounter in Deep Learning.\n",
     "\n",
-    "$$\n",
-    "\\begin{array} \\\\\n",
-    "\\X & = & \\tilde{\\X} V & \\\\\n",
-    "\\X_j  & = & (\\tilde{\\X} V^T)_j & \\text{focus on raw feature } j \\\\\n",
-    "              & = & \n",
-    "              \\begin{pmatrix}\n",
-    "              \\tilde{\\X}^{(1)} \\cdot V^T_j \\\\\n",
-    "              \\tilde{\\X}^{(2)} \\cdot V^T_j \\\\\n",
-    "              \\vdots \\\\\n",
-    "              \\tilde{\\X}^{(m)} \\cdot V^T_j \\\\\n",
-    "              \\end{pmatrix} & \\text{definition of matrix multiplication} \\\\\n",
-    "               & = & \n",
-    "              \\begin{pmatrix}\n",
-    "              \\tilde{\\X}^{(1)} \\cdot V^{(j)} \\\\\n",
-    "              \\tilde{\\X}^{(2)} \\cdot V^{(j)} \\\\\n",
-    "              \\vdots \\\\\n",
-    "              \\tilde{\\X}^{(m)} \\cdot V^{(j)} \n",
-    "              \\end{pmatrix} & \\text{definition of transpose}\\\\\n",
-    "\\end{array}\n",
-    "$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Let's examine the sensitivity of raw feature $\\X_j$ to a change in synthetic feature $\\tilde{\\X}_{j'}$\n",
-    "$$\\frac{\\partial{\\X_j}}{\\partial \\tilde{\\X}_{j'}}$$\n",
-    "\n",
-    "Let $\\Delta({j'})$ be the length $n$ vector of all $0$'s except at index $j'$\n",
-    "$$\n",
-    "\\Delta(j')_k =\n",
-    "\\begin{cases}\n",
-    "0 & \\text{if} & k \\ne j' \\\\\n",
-    "1 & \\text{if} & k = j'\n",
-    "\\end{cases}\n",
-    "$$\n",
-    "\n",
-    "That is, $\\Delta({j'})$ represents a unit change to synthetic feature $j'$ while having $0$ change to all other features\n",
-    "$$\n",
-    "\\begin{array} \\\\\n",
-    "\\frac{\\partial{\\X_j}}{\\partial \\tilde{\\X}_{j'}}  = \n",
-    "\\begin{pmatrix}\n",
-    " \\Delta({j'}) \\cdot V^{(j)}  \\\\\n",
-    " \\Delta({j'}) \\cdot V^{(j)} \\\\\n",
-    " \\vdots \\\\\n",
-    " \\Delta({j'}) \\cdot V^{(j)} \\\\\n",
-    "\\end{pmatrix} \\\\\n",
-    "& = &\n",
-    "\\begin{pmatrix}\n",
-    " V^{(j)}_{j'}  \\\\\n",
-    " V^{(j)}_{j'}  \\\\\n",
-    " \\vdots \\\\\n",
-    "  V^{(j)}_{j'}  \\\\\n",
-    "\\end{pmatrix}\n",
-    "\\end{array}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "So a *unit change* in synthetic feature $j'$ results in a change of $V^{(j)}_{j'}$ in feature $\\X_j$.\n",
-    "\n",
-    "Recall\n",
-    "$$\n",
-    "\\tilde\\X = U \\Sigma \n",
-    "$$\n",
-    "\n",
-    "By examining \n",
-    "the sensitivity of raw feature $\\X_j$ to a change in *standardized* synthetic feature $U_{j'}$\n",
-    "$$\\frac{\\partial{\\X_j}}{\\partial U_{j'}}$$\n",
-    "\n",
-    "we instead find the change in raw feature $\\X_j$ for a *one standard deviation change* in $\\tilde\\X_{j'}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Given the index $j'$ of one component/synthetic feature\n",
-    "- We can vary the index $j$ of raw features\n",
-    "- To see how much a unit change in component $j'$ changes each raw feature $j$\n",
-    "\n",
-    "We can try to interpret component/synthetic feature $j'$ in terms of how it affects raw features."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "For example, it is often the case that (indices of) raw feature  $\\{ 1, 2, \\ldots, n \\}$\n",
-    "- contains a subset of indices $P = \\{ i_1, i_2, \\dots \\}$ with positive response to a change in component/synthetic feature $j'$\n",
-    "- contains a subset of indices $N = \\{ i'_1, i'_2, \\dots \\}$ with negative response to a change in component/synthetic feature $j'$\n",
-    "\n",
-    "We can then interpret component/synthetic feature $j'$ as a feature that creates a dichotomy of behavior\n",
-    "among raw features $P$ and $N$\n",
-    "\n",
-    "We will see such dichotomies in our examples for PCA in Finance\n",
-    "- component/synthetic feature $2$ affects the short end of the Yield Curve in an opposite manner from the long end of the Yield Curve\n",
-    "- component/synthetic feature $2$ affects the returns of Large-Cap equities in an opposite manner from Small-Cap equities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "To find a component/synthetic feature $j'$ that expresses a dichotomy, one needs to find sets $P$ and $N$\n",
-    "that have some \"natural\" meaning\n",
-    "- Each raw feature (e.g., equity) may posses a set of \"attributes\"\n",
-    "    - Market Cap\n",
-    "    - Cyclical/Non-Cyclical\n",
-    "    - Industry\n",
-    "- By partitioning/sorting raw feature indices according to one such attribute, we might observe a dichotomy   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "**Bottom line**\n",
-    "- There is not automatic method to find a good interpretation\n",
-    "- Form a theory as to what attributes each raw feature possesses\n",
-    "- See whether a recognizable pattern of responses to unit change in component/synthetic feature $j'$ emerges\n",
-    "    - When grouping raw features according to common values of an attribute\n",
-    "    - When sorting features according to the level of an attribute\n"
+    "Thus, it is a good transition."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
