--- a/SVM_Kernel_Functions.ipynb
+++ b/SVM_Kernel_Functions.ipynb
@@ -358,7 +358,7 @@
    "source": [
     "# Support Vector Machines: SVC's with integrated transformations\n",
     "\n",
-    "Nothing we have said above Linearity Inducing transformations should be new to you.\n",
+    "Nothing we have said about Linearity Inducing transformations should be new to you.\n",
     "\n",
     "It is just like any other problem:\n",
     "- Apply transformations\n",
