--- a/Pseudo_Matrix_Factorization.ipynb
+++ b/Pseudo_Matrix_Factorization.ipynb
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "slide"
     }
    },
    "source": [
