--- a/CNN_Convolution_as_Matrix_Multiplication.ipynb
+++ b/CNN_Convolution_as_Matrix_Multiplication.ipynb
@@ -118,8 +118,7 @@
     }
    ],
    "source": [
-    "%run Latex_macros.ipynb\n",
-    "%run beautify_plots.py"
+    "%run Latex_macros.ipynb"
    ]
   },
   {
@@ -145,25 +144,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import os\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import class_helper\n",
-    "%aimport class_helper\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -171,13 +151,19 @@
     }
    },
    "source": [
-    "# Pseudo Matrix Factorization and Recommender Systems\n",
+    "# Convolution as matrix multiplication\n",
+    "[A guide to convolutional arithmetic for deep learning](https://arxiv.org/pdf/1603.07285.pdf)\n",
     "\n",
-    "You have no doubt been to a website that\n",
-    "- Has made a recommendation to you\n",
-    "- Based on your personal \"features\"\n",
+    "Convolution involves a multi-dimensional dot product over a large volume\n",
+    "- each location, of each input feature map\n",
     "\n",
-    "*You might also like ...*"
+    "Doing this in a loop would be very expensive.\n",
+    "\n",
+    "There are many highly efficient libraries for matrix multiplication\n",
+    "- some of which can take advantage of parallelism and GPU's.\n",
+    "\n",
+    "Geron equation 13-1\n",
+    "\n"
    ]
   },
   {
@@ -188,79 +174,24 @@
     }
    },
    "source": [
-    "How does this work ?\n",
-    "- *You* are an example $\\x^\\ip$, expressed as a vector of features\n",
-    "    - $\\x^\\ip_j$ is your \"rating\" for product $j$\n",
-    "- The number $n$ of products is large\n",
-    "    - You have rated only a small fraction $n_i \\lt n$\n",
-    "- You have *not* rated product $j'$\n",
-    "    - How can the system recommend $j'$ to you ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "PCA to the rescue !\n",
-    "- Perform PCA on $\\X$ ($m$ is number of users; $n$ is number of products)\n",
-    "- The Principal Components are \n",
-    "    - \"Concepts\" that identify groups of products"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "We will\n",
-    "- Re-express your ratings of concrete product $\\x^\\ip$\n",
-    "- Into strength of concepts $\\tilde\\x^\\ip$\n",
-    "- Find other users $i'$ with similar strength of concepts\n",
+    "We can turn convolution into matrix multiplication.\n",
+    "\n",
+    "For simplicity, we will show this for a single channel, using a $(3 \\times 3)$ kernel on a $(4 \\times 4 \\times 1)$ input volume.\n",
+    "\n",
+    "Basically: we flatten out both the kernel matrix $W$ \n",
+    "\n",
     "$$\n",
-    "\\tilde\\x^{(i')} \\approx \\tilde\\x^\\ip\n",
+    "W = \\begin{pmatrix}\n",
+    "w_{0,0} & w_{0,1} & w_{0,2} \\\\\n",
+    "w_{1,0} & w_{1,1} & w_{1,2} \\\\\n",
+    "w_{2,0} & w_{2,1} & w_{2,2}\n",
+    "\\end{pmatrix}\n",
     "$$\n",
-    "- Deduce that you (user $i$) have similar tastes to user $i'$\n",
-    "- Recommend to you (user $i$) any product $j$\n",
-    "    - where $\\x^{(i')}_j$ is high"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "This is roughly how Netflix recommendations work.\n",
-    "- Products are Movies\n",
-    "- Principal Components (\"concepts\") turn out to be Movie genres\n",
-    "    - Action, Comedy, Romance, Gender-specific\n",
-    "    \n",
-    "So if your movie preferences lean to Comedy, Netflix will recommend to you Comedy-type movies"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Although this *seems* like a simple application of PCA\n",
-    "- There is a giant catch !\n",
-    "- $\\X$ is sparse (lots of empty entries)\n",
-    "    - How many of the thousands of movies in Netflix have *you* rated ?\n",
+    "and the input volume matrix.\n",
     "\n",
-    "How do we factor a matrix with undefined entries ?"
+    "Since the input volume is $(16 \\times 1)$, we will left multiply by a matrix with number of rows equal to the output volume, and $16$ columns.\n",
+    "\n",
+    "For simplicity, we do this without padding, so the output volume is $(2 \\times 2)$ which flattened is $(4 \\times 1)$"
    ]
   },
   {
@@ -271,24 +202,13 @@
     }
    },
    "source": [
-    "Let's go the the [notebook section on Pseudo Matrix Factorization](Unsupervised.ipynb#Recommender-Systems:-Pseudo-SVD)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Pseudo Matrix factorization wrap-up\n",
-    "\n",
-    "The techniques in Pseudo factorization are a nice bridge between Classical ML and Deep Learning\n",
-    "- An interesting Loss function\n",
-    "- Not amenable to closed form solution (because of missing entries)\n",
-    "- But approximated using our generic optimization tool\n",
-    "    - Gradient Descent"
+    "$C = \\begin{pmatrix}\n",
+    "    w_{0,0} & w_{0,1} & w_{0,2} & 0 & w_{1,0} & w_{1,1} & w_{1,2} & 0 & w_{2,0} & w_{2,1} & w_{2,2} & 0 & 0 & 0 & 0 & 0 \\\\\n",
+    "    0       & w_{0,0} & w_{0,1} & w_{0,2} & 0 & w_{1,0} & w_{1,1} & w_{1,2} & 0 & w_{2,0} & w_{2,1} & w_{2,2} & 0 & 0 & 0 & 0 \\\\\n",
+    "    0       & 0       & 0       & 0       & w_{0,0} & w_{0,1} & w_{0,2} & 0 & w_{1,0} & w_{1,1} & w_{1,2} & 0 & w_{2,0} & w_{2,1} & w_{2,2} & 0 \\\\\n",
+    "    0 & 0       & 0       & 0       & 0       & w_{0,0} & w_{0,1} & w_{0,2} & 0 & w_{1,0} & w_{1,1} & w_{1,2} & 0 & w_{2,0} & w_{2,1} & w_{2,2} \n",
+    "  \\end{pmatrix}\n",
+    "  $"
    ]
   },
   {
@@ -299,14 +219,21 @@
     }
    },
    "source": [
-    "This type of problem is very typical of those that we will encounter in Deep Learning.\n",
+    "Once you understand that the convolution result\n",
+    "- is obtained as $C X'_{l}$ \n",
+    "- (where $X'_{l}$ is the flattened inputs to layer $l$), \n",
+    "- you can imagine an inverse of $C$ to go from the convolution result\n",
+    "backwards to $X'_{l}$.\n",
     "\n",
-    "Thus, it is a good transition."
+    "That is, we can trace backwards from each activation in a feature map to the inputs that went into its\n",
+    "computation.\n",
+    "\n",
+    "This will enable us to do back propagation.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
