--- a/DNN_TensorFlow_Using_TF_version_1.ipynb
+++ b/DNN_TensorFlow_Using_TF_version_1.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -544,10 +544,7 @@
      "text": [
       "Training for 20 epochs\n",
       "Epoch 0 training batch accuracy 92.00%, validation set accuracy 88.78%:\n",
-      "Epoch 5 training batch accuracy 86.00%, validation set accuracy 94.50%:\n",
-      "Epoch 10 training batch accuracy 96.00%, validation set accuracy 96.02%:\n",
-      "Epoch 15 training batch accuracy 96.00%, validation set accuracy 96.52%:\n",
-      "Trained\n"
+      "Epoch 5 training batch accuracy 86.00%, validation set accuracy 94.50%:\n"
      ]
     }
    ],
@@ -597,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -607,19 +604,7 @@
     "id": "wecpagmYx8RU",
     "outputId": "9073603c-92d9-452c-9005-7d6c40cfc3e8"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from ./mnist_first.ckpt\n",
-      "Test logits shape:  (10000, 10)\n",
-      "Test predictions: \t [7 2 1 0 4 1 4 9 6 9]\n",
-      "Test correct ?:\t  [ True  True  True  True  True  True  True  True False  True]\n",
-      "Test accuracy 96.57\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tf.Session() as sess:\n",
     "  # Restore the model, do NOT re-initialize the variables with the \"init\" node\n",
@@ -650,17 +635,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Done\")"
    ]
