--- a/Gradient_Descent.ipynb
+++ b/Gradient_Descent.ipynb
@@ -785,7 +785,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8d3f09c1c1d4e73ba49e369247f32cf",
+       "model_id": "5133ce29a634407984e8d4ec8edd38c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1035,7 +1035,10 @@
     "clf_lr = gdh.fit_lr(X_lr,y_lr)\n",
     "fig, ax = gdh.plot_lr(X_lr, y_lr, clf_lr)\n",
     "\n",
-    "theta_lr = (clf_lr.intercept_, clf_lr.coef_)"
+    "theta_lr = (clf_lr.intercept_, clf_lr.coef_)\n",
+    "\n",
+    "# Insert the intercept into the array of parameters\n",
+    "theta_lr = np.append( np.array([clf_lr.intercept_]), clf_lr.coef_)"
    ]
   },
   {
@@ -1061,8 +1064,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[7.993605777301127e-15],\n",
-       "       [-8.43769498715119e-15]], dtype=object)"
+       "array([ 7.99360578e-15, -8.43769499e-15])"
       ]
      },
      "execution_count": 24,
@@ -1073,6 +1075,57 @@
    "source": [
     "gd_theta = gdh.batchGradientDescent_lr(X_lr, y_lr)\n",
     "theta_lr - gd_theta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The $\\Theta$'s are equal up to 15 decimal points."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Aside**\n",
+    "\n",
+    "We can also find the optimal $\\Theta$ by directly minimizing a user-defined Loss\n",
+    "- exactly the same as MSE in this case\n",
+    "- using a non-SGD optimizer (from `scipy`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.42307080e-09, 3.92025035e-09])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta_minimize_loss = gdh.minimize_loss_lr(X_lr, y_lr)\n",
+    "theta_lr - theta_minimize_loss"
    ]
   },
   {
@@ -1158,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1168,11 +1221,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[ True],\n",
-       "       [ True]])"
+       "array([[ True, False],\n",
+       "       [False,  True]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1283,7 @@
        "<Figure size 1440x432 with 4 Axes>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1263,7 +1316,7 @@
        "<Figure size 1440x432 with 4 Axes>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1302,7 +1355,7 @@
        "<Figure size 1440x432 with 4 Axes>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1726,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
