--- a/Neural_Networks_Overview.ipynb
+++ b/Neural_Networks_Overview.ipynb
@@ -743,16 +743,38 @@
    "source": [
     "# Final layer: Regression/Classification\n",
     "\n",
-    "Layer $L$ in our cartoon implements Regression or Classification.\n",
-    "- Regression is nothing more than a dot product followed by an identity/linear activation\n",
-    "$$\n",
+    "The Head Layer (layer $L$)\n",
+    "- takes the final representation of the data\n",
+    "- applies a layer determined by the task\n",
+    "    - Regression\n",
+    "    - Classification\n",
+    "<div>\n",
+    "    <!-- edX: Original: <img src=\"images/NN_Layers.png\"> replace by EdX created image -->\n",
+    "    <img src=\"images/W12_L1_NN_layers1920by1080.png\">\n",
+    "    \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- Regression is nothing more than a dot product\n",
+    "    - $\n",
     "\\y_{L} = \\y_{(L-1)} \\cdot \\W_{L}\n",
-    "$$\n",
+    "$\n",
+    "    - Implemented by a Fully Connected layer with **no** activation\n",
     "- Classification is nothing more than a dot product followed by a sigmoid activation\n",
-    "$$\n",
+    "    - $\n",
     "\\y_{L} = \\sigma( \\y_{(L-1)} \\cdot \\W_{L} )\n",
-    "$$\n",
-    "as discussed in our lecture on Classification."
+    "$\n",
+    "    - Exactly the same way as discussed in our \"Classical\" Machine Learning lecture\n",
+    "    - Implemented by a Fully Connected layer with a sigmoid activation\n",
+    "    "
    ]
   },
   {
@@ -775,7 +797,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -828,7 +850,7 @@
     }
    },
    "source": [
-    "Recall that a Neural Net (including one augmented by a Loss Layer) is doing nothing more than computing a function.\n",
+    "Recall that a Neural Net (including one augmented by a Loss Layer) is doing nothing more than compute a function.\n",
     "\n",
     "Gradient Descent needs to take the gradient of this function (evaluated on a mini batch of examples) in order to update the weights $\\W$.\n",
     "\n",
@@ -925,10 +947,15 @@
    "source": [
     "We still write `(a + b) * c` but it really results in something like:\n",
     "- `tf.math.mult( tf.math.add(a, b), c)`\n",
-    "- The expression `tf.math.add(a, b)`\n",
-    "    - Can be differentiated analytically\n",
-    "    - Since we know the operation is addition\n",
-    "    - It records that the arguments are `a, b`"
+    "\n",
+    "The expression \n",
+    ">`tf.math.add(a, b)`\n",
+    "\n",
+    "can be differentiated analytically because it records\n",
+    "- the arguments are `a, b`\n",
+    "- the operation is addition\n",
+    "- we know the derivative of an addition operation\n",
+    "    "
    ]
   },
   {
@@ -940,7 +967,18 @@
    },
    "source": [
     "So Tensorflow facilitates analytic function differentiation while hiding the details from the user.\n",
-    "\n",
+    "- We will see some pseudo-code that shows how this is done\n",
+    "- Check out the [Deeper Dive on Computation Graphs](Computation_Graphs.ipynb) if you want to know more"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "By the way: what is a Tensor ?  It is an object with an arbitrary number of dimensions.\n",
     "\n",
     "We use special cases all the time:\n",
@@ -957,7 +995,7 @@
     }
    },
    "source": [
-    "As you've seem, we are already dealing with higher dimensional objects.\n",
+    "As you've seen, we are already dealing with higher dimensional objects.\n",
     "\n",
     "Consider $\\y$:\n",
     "- $\\y_{\\llp, j, j'}$\n",
@@ -975,6 +1013,11 @@
    },
    "source": [
     "In the future we will talk about *sequences* of $\\y$, thus adding another dimension: time.\n",
+    "\n",
+    "And, don't forget, the \"batch index\" dimension\n",
+    "- Tensorflow processes *mini-batches* of examples, not singeltons\n",
+    "- $\\y^\\ip_{\\llp, j, j'}$\n",
+    "    - Element $j'$ of the output (given input examples $i$) of unit $j$ of layer $\\ll: \\y_{\\llp, j, j'}$\n",
     "\n",
     "The notation will become a little heavy but hopefully understandable as a way of indexing a high dimension object."
    ]
@@ -1231,7 +1274,7 @@
     "width": "370.594px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
