--- a/Unsupervised.ipynb
+++ b/Unsupervised.ipynb
@@ -2956,7 +2956,7 @@
     "\n",
     "Matrix $\\X$: user rating of movies\n",
     "\n",
-    "$\\X_j^{(i)}$ is $i^{\\text{th}}$ user's rating of movie $j$"
+    "$\\X^\\ip_j$ is $i^{\\text{th}}$ user's rating of movie $j$"
    ]
   },
   {
@@ -3168,7 +3168,7 @@
     "\n",
     "$$\n",
     "\\begin{array}\\\\\n",
-    "\\loss(\\X',\\X) & = & \\sum\\limits_{\\substack{1 \\le i \\le m,\\\\ 1 \\le j \\le n \\\\ \\X_j^{(i)} \\text{defined}}} { \\left(  \\X_j^{(i)} - {\\X'}_j^{(i)} \\right)^2} \n",
+    "\\loss(\\X',\\X) & = & \\sum\\limits_{\\substack{1 \\le i \\le m,\\\\ 1 \\le j \\le n \\\\ \\X^\\ip_j \\text{defined}}} { \\left(  \\X^\\ip_j - {\\X'}^{(i')}_j \\right)^2} \n",
     "\\end{array}\n",
     "$$\n",
     "\n",
@@ -3189,8 +3189,8 @@
     "\n",
     "$$\n",
     "\\begin{array}\\\\\n",
-    "\\loss(\\X',\\X) & = & \\sum\\limits_{\\substack{1 \\le i \\le m,\\\\ 1 \\le j \\le n \\\\ \\X_j^{(i)} \\text{defined}}} { \\left(  \\X_j^{(i)} - {\\X'}_j^{(i)} \\right)^2} \\\\\n",
-    "& = & \\sum\\limits_{\\substack{1 \\le i \\le m,\\\\ 1 \\le j \\le n \\\\ \\X_j^{(i)} \\text{defined}}} { \\left(  \\X_j^{(i)} - (P Q^T)_j^{(i)} \\right)^2} & \\text{ since } \\X' = P Q^T \\\\\n",
+    "\\loss(\\X',\\X) & = & \\sum\\limits_{\\substack{1 \\le i \\le m,\\\\ 1 \\le j \\le n \\\\ \\X_j^{(i)} \\text{defined}}} { \\left(  \\X_j^{(i)} - {\\X'}^{(i)}_j \\right)^2} \\\\\n",
+    "& = & \\sum\\limits_{\\substack{1 \\le i \\le m,\\\\ 1 \\le j \\le n \\\\ \\X_j^{(i)} \\text{defined}}} { \\left(  \\X^\\ip_j - (P Q^T)_j^{(i)} \\right)^2} & \\text{ since } \\X' = P Q^T \\\\\n",
     "\\end{array}\n",
     "$$"
    ]
