--- a/Index.ipynb
+++ b/Index.ipynb
@@ -293,7 +293,18 @@
     "- [Interpretation: Linear Models](Linear_Model_Interpretation.ipynb)\n",
     "  \n",
     "Deeper dives\n",
-    "- [Other matrix factorization methods](Unsupervised_Other_Factorizations.ipynb)"
+    "- [Other matrix factorization methods](Unsupervised_Other_Factorizations.ipynb)\n",
+    "\n",
+    "## Deep Learning: Headstart\n",
+    "\n",
+    "### Week 1 Introduction to Neural Networks and Deep Learning\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "Deep Learning/Neural networks\n",
+    "\n",
+    "- [Set up your Tensorflow environment](Tensorflow_setup.ipynb)\n",
+    "- [Neural Networks Overview](Neural_Networks_Overview.ipynb)\n"
    ]
   },
   {
@@ -312,12 +323,16 @@
     "\n",
     "**Plan**\n",
     "\n",
-    "Deep Learning/Neural networks\n",
+    "- \n",
+    "Continue our introduction to Neural Networsk/Deep Learning\n",
     "\n",
-    "- [Set up your Tensorflow environment](Tensorflow_setup.ipynb)\n",
+    "- Neural network: practical\n",
+    "- Neural network theory: continued\n",
     "\n",
-    "- [Neural Networks Overview](Neural_Networks_Overview.ipynb)\n",
+    "**Neural network: overview**\n",
+    "- [Neural Networks Overview \\(continued\\)](Neural_Networks_Overview.ipynb#Final-layer:-Regression/Classification)\n",
     "\n",
+    "**Neural network: practical**\n",
     "- Coding Neural Networks: Tensorflow, Keras\n",
     "    - [Intro to Keras](Tensorflow_Keras.ipynb)\n",
     "\n",
@@ -325,12 +340,40 @@
     "<!--- The Colab notebook imports some modules; make sure they are in the repo --->\n",
     "<!--- #include (neural_net_helper.py) --->\n",
     "   - **Colab**: [Practical Colab Notebook from github](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Colab_practical.ipynb)\n",
-    "    \n",
+    " \n",
+    "**Neural network theory**\n",
+    "- [A neural network is a Universal Function Approximator](Universal_Function_Approximator.ipynb)\n",
+    "   \n",
     "**Deeper Dives**\n",
     "- [Keras, from past to present](Tensorflow_Keras_Archaeology.ipynb)\n",
     "- [History/Computation Graphs: Tensorflow version 1](DNN_TensorFlow_Using_TF_version_1.ipynb)\n",
     "- [Raw_TensorFlow example Notebook from github](https://colab.research.google.com/github/kenperry-public/ML_Spring_2020/blob/master/Raw_TensorFlow.ipynb) (**Colab**)\n",
     "- [Computation Graphs](Computation_Graphs.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 2 Convolutional Neural Networks\n",
+    "\n",
+    "**Plan**\n",
+    "- Convolutional Neural Network layer type\n",
+    "\n",
+    "\n",
+    "**Convolutional Neural Networks (CNN)**\n",
+    "- [Introduction to CNN](Intro_to_CNN.ipynb)\n",
+    "- [CNN: multiple input/output features](CNN_Overview.ipynb)\n",
+    "- [CNN: Space and Time](CNN_Space_and_Time.ipynb)\n",
+    "    - [CNN example from github](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/CNN_demo.ipynb) (**Colab**) \n",
+    "    - [CNN example from github](CNN_demo.ipynb) (**local machine**) \n",
+    "\n",
+    "**Deeper dives**\n",
+    "- [Convolution as Matrix Multiplication](CNN_Convolution_as_Matrix_Multiplication.ipynb)\n"
    ]
   },
   {
