--- a/Tensorflow_Keras.ipynb
+++ b/Tensorflow_Keras.ipynb
@@ -61,9 +61,48 @@
     "Confusion warning:\n",
     "- There are two similar *but different* packages that implement Keras\n",
     "    - one built into TensorFlow (the one we will use)\n",
-    "    - a separate project\n",
-    "    \n",
-    "Later in this module we will explain the difference and why it's important to distinguish between them."
+    "    - a separate project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "    <b>TL;DR</b> \n",
+    "    <br>\n",
+    "    <br>\n",
+    "        <b>YES</b><br>\n",
+    "    <ul>\n",
+    "        <li>\n",
+    "            <font face=\"Courier\" color=\"black\" weight=\"bold\">\n",
+    "            import tensorflow as tf<br>\n",
+    "            tf.keras.layers.Dense(...)\n",
+    "            </font>\n",
+    "        </li>\n",
+    "        <li>\n",
+    "            <font face=\"Courier\" color=\"black\" weight=\"bold\">\n",
+    "            from tensorflow import keras<br>\n",
+    "            keras.layers.Dense(...)\n",
+    "            </font>\n",
+    "        </li>\n",
+    "    </ul>\n",
+    "    <br>\n",
+    "        <b>NO</b><br>\n",
+    "    <ul>\n",
+    "    <li> <font face=\"Courier\" color=\"black\" weight=\"bold\">\n",
+    "        import keras<br>\n",
+    "        keras.layers.Dense( ... )\n",
+    "        </font>\n",
+    "        </li>\n",
+    "    </ul>\n",
+    "        </div>\n",
+    "        \n",
+    "If you want to know the details, visit this [notebook](Tensorflow_Keras_Archaeology.ipynb#tensorflow.keras-vs-keras-(Confusion-alert))\n"
    ]
   },
   {
@@ -137,6 +176,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- A model uses the `Sequential` architecture\n",
+    "- A sequence (implemented as an array) of layers\n",
+    "    - Single element array\n",
+    "    - Consisting of a `Dense` (Fully connected) layer\n",
+    "        - with $1$ output\n",
+    "        - No activation\n",
+    "        - Implements Regression\n",
+    "- Loss is `mse`"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {
     "slideshow": {
@@ -159,6 +216,24 @@
     }
    },
    "source": [
+    "- A model uses the `Sequential` architecture\n",
+    "- A sequence (implemented as an array) of layers\n",
+    "    - Single element array\n",
+    "    - Consisting of a `Dense` (Fully connected) layer\n",
+    "        - with $1$ output: binary classification\n",
+    "        - sigmoid activation\n",
+    "        - Implements Classification\n",
+    "- Loss is `binary_crossentropy`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "    <b>TL;DR</b> \n",
     "    <br>\n",
@@ -170,12 +245,12 @@
     "        <li>Regression example\n",
     "             <ul>\n",
     "                <li>No activation</li>\n",
-    "                <li>MSE cost</li>\n",
+    "                <li>MSE loss</li>\n",
     "                 </ul>\n",
     "        <li>Binary classification example\n",
     "         <ul>\n",
     "            <li>Sigmoid activation</li>\n",
-    "            <li>Binary cross entropy cost</li>\n",
+    "            <li>Binary cross entropy loss</li>\n",
     "             </ul>\n",
     "    </ul>\n",
     "    \n",
@@ -203,7 +278,7 @@
     }
    },
    "source": [
-    "  import tensorflow as tf\n",
+    "import tensorflow as tf\n",
     "from tensorflow.keras.models import Model, Sequential\n",
     "from tensorflow.keras import layers\n",
     "\n",
@@ -220,12 +295,31 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- A model uses the `Sequential` architecture\n",
+    "- A sequence (implemented as an array) of layers\n",
+    "    - 3 layers (3 element array)\n",
+    "    - 2 `Dense` layers \n",
+    "        - with varying number of outputs: `n_hidden_1`,`n_hidden_2`\n",
+    "        - `relu` activation\n",
+    "    - A `Dense` layer implementing Multinomial Classification\n",
+    "        - number of outputs equal to number of classes\n",
+    "        - `softmax` activation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
-    "This defines a NN with three layers\n",
-    "- we will explain the layers in detail later\n",
+    "- The first two layers \"transform\" the input\n",
+    "- The \"head\" layer implements Multinomial Classification\n",
     "\n",
     "To use the model, you first need to \"compile\" it"
    ]
@@ -253,7 +347,7 @@
    },
    "source": [
     "\"Compiling\" is quite significant as we will demonstrate later\n",
-    "- For now: *it is where you define the Cost/Loss function*\n",
+    "- For now: *it is where you define the Loss function*\n",
     "    \n",
     "Next, just as in `sklearn`: you \"fit\" the model to the training data."
    ]
