--- a/Index.ipynb
+++ b/Index.ipynb
@@ -453,6 +453,20 @@
     "        - A directory named `Data`\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Keras practice\n",
+    "- Assignment notebook [Ships in satellite images: Neural Network](assignments/keras_intro/Ships_in_satellite_images_P1.ipynb)\n",
+    "- Data (same as for the Classification assignment)\n",
+    "    - please repeat the directions given in that assignment for obtaining the data"
+   ]
   }
  ],
  "metadata": {
