--- a/Index.ipynb
+++ b/Index.ipynb
@@ -348,7 +348,13 @@
     "- [Keras, from past to present](Tensorflow_Keras_Archaeology.ipynb)\n",
     "- [History/Computation Graphs: Tensorflow version 1](DNN_TensorFlow_Using_TF_version_1.ipynb)\n",
     "- [Raw_TensorFlow example Notebook from github](https://colab.research.google.com/github/kenperry-public/ML_Spring_2020/blob/master/Raw_TensorFlow.ipynb) (**Colab**)\n",
-    "- [Computation Graphs](Computation_Graphs.ipynb)\n"
+    "- [Computation Graphs](Computation_Graphs.ipynb)\n",
+    "\n",
+    "\n",
+    "## Convolutional Neural Networks \n",
+    "\n",
+    "**Convolutional Neural Networks (CNN)**\n",
+    "- [Introduction to CNN](Intro_to_CNN.ipynb)\n"
    ]
   },
   {
@@ -362,18 +368,65 @@
     "# Week 2 Convolutional Neural Networks\n",
     "\n",
     "**Plan**\n",
-    "- Convolutional Neural Network layer type\n",
+    "- Continue our exploration of the Convolutional Neural Network layer type\n",
+    "- Introduce the topic of Training Neural Networks\n",
     "\n",
     "\n",
     "**Convolutional Neural Networks (CNN)**\n",
-    "- [Introduction to CNN](Intro_to_CNN.ipynb)\n",
     "- [CNN: multiple input/output features](CNN_Overview.ipynb)\n",
     "- [CNN: Space and Time](CNN_Space_and_Time.ipynb)\n",
     "    - [CNN example from github](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/CNN_demo.ipynb) (**Colab**) \n",
     "    - [CNN example from github](CNN_demo.ipynb) (**local machine**) \n",
     "\n",
+    "**Training Neural Networks (introduction)**\n",
+    "- [Training Neural Networks - introduction](Training_Neural_Networks_Intro.ipynb)\n",
+    "\n",
     "**Deeper dives**\n",
     "- [Convolution as Matrix Multiplication](CNN_Convolution_as_Matrix_Multiplication.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 3 Recurrent Neural Networks\n",
+    "\n",
+    "**Plan**\n",
+    "- Introduce a new layer type: Recurrent layers\n",
+    "    - Part of our \"sprint\": final layer type\n",
+    "    - Will revisit more theoretical issues in subsequent lectures\n",
+    "    \n",
+    "- [Introduction to Recurrent Neural Network (RNN)](Intro_to_RNN.ipynb)\n",
+    "- [Recurrent Neural Network Overview](RNN_Overview.ipynb)\n",
+    "    - [LSTM_text_generation from github](https://colab.research.google.com/github/kenperry-public/ML_Spring_2021/blob/master/Keras_examples_LSTM_text_generation.ipynb) (**Colab**)\n",
+    "    - [LSTM_text_generation from github](Keras_examples_LSTM_text_generation.ipynb) (**local machine**)\n",
+    "\n",
+    "\n",
+    "**Deeper dives**\n",
+    "- [RNN: How to deal with long sequences](RNN_Long_Sequences.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 4 Training Neural Networks\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "Sprint is over ! We have covered the basic layer types; time for you to learn by experimenting.\n",
+    "\n",
+    "Explore the science and art of training a neural network via Gradient Descent.\n",
+    "\n",
+    "- [Training Neural Networks](Training_Neural_Networks_Overview.ipynb)"
    ]
   },
   {
